--- a/homeworks/hw3/cta_section.html
+++ b/homeworks/hw3/cta_section.html
@@ -23,6 +23,7 @@
     >
       <h1
         style="
+          box-sizing: border-box;
           align-self: stretch;
           color: #101828;
           text-align: center;
@@ -39,6 +40,7 @@
       </h1>
       <h4
         style="
+          box-sizing: border-box;
           align-self: stretch;
           color: #667085;
           text-align: center;
@@ -55,8 +57,9 @@
       <div style="display: flex;">
         <div
           style="
+            box-sizing: border-box;
             margin-right: 12px;
-            width: 128px;
+            width: 130px;
             height: 48px;
             color: #344054;
             font-family: Arial;
@@ -79,6 +82,7 @@
         </div>
         <div
           style="
+            box-sizing: border-box;
             width: 129px;
             height: 48px;
             color: #fff;
