--- a/homeworks/hw3/cta_section.html
+++ b/homeworks/hw3/cta_section.html
@@ -2,108 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style_cs.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div
-      style="
-        display: flex;
-        width: 1440px;
-        padding: 96px 0px;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 64px;
-        background: #f9fafb;
-        width: 1440px;
-        height: 372px;
-        padding: 96px;
-      "
-    >
-      <h1
-        style="
-          box-sizing: border-box;
-          align-self: stretch;
-          color: #101828;
-          text-align: center;
-          font-family: Arial;
-          font-size: 36px;
-          font-style: normal;
-          font-weight: 600;
-          line-height: 44px;
-          letter-spacing: -0.72px;
-          margin-bottom: 20px;
-        "
-      >
-        Start your free trial
-      </h1>
-      <h4
-        style="
-          box-sizing: border-box;
-          align-self: stretch;
-          color: #667085;
-          text-align: center;
-          font-family: Arial;
-          font-size: 20px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 30px;
-          margin-bottom: 40px;
-        "
-      >
-        Join over 4,000+ startups already growing with Untitled.
-      </h4>
-      <div style="display: flex;">
-        <div
-          style="
-            box-sizing: border-box;
-            margin-right: 12px;
-            width: 130px;
-            height: 48px;
-            color: #344054;
-            font-family: Arial;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 24px;
-            display: flex;
-            padding: 12px 20px;
-            justify-content: center;
-            align-items: center;
-            gap: 8px;
-            border-radius: 8px;
-            border: 1px solid #d0d5dd;
-            background: var #fff;
-            box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
-          "
-        >
-          Learn more
-        </div>
-        <div
-          style="
-            box-sizing: border-box;
-            width: 129px;
-            height: 48px;
-            color: #fff;
-            font-family: Arial;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 24px;
-            display: flex;
-            padding: 12px 20px;
-            justify-content: center;
-            align-items: center;
-            gap: 8px;
-            border-radius: 8px;
-            border: 1px solid #7f56d9;
-            background: #7f56d9;
-            box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
-          "
-        >
-          Get started
-        </div>
+    <div>
+      <h1>Start your free trial</h1>
+      <h4>Join over 4,000+ startups already growing with Untitled.</h4>
+      <div>
+        <div class="button white">Learn more</div>
+        <div class="button violet">Get started</div>
       </div>
     </div>
   </body>
