--- a/test_task/tablet.html
+++ b/test_task/tablet.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tBot</title>
+    <title>tBot-test-tabletVersion</title>
   </head>
   <body>
     <section class="first">
