Исправила ошибки в test-task

--- a/test_task/LP_desktop.html
+++ b/test_task/LP_desktop.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="first">
-      <div class="header_container">
+      <div class="container">
         <div class="logo">
           <img class="logo__img" src="images/logo.svg" alt="logo" />
           <h3 class="logo__title">tBot</h3>
@@ -26,7 +26,7 @@
           <div class="button header_button2">Регистрация</div>
         </div>
       </div>
-      <div class="main_container">
+      <div class="main container">
         <img src="images/purple_circle.svg" alt="/" />
         <img src="images/turquoise_circle.svg" alt="/" />
         <img src="images/big_purple_circle.svg" alt="/" />
@@ -42,7 +42,6 @@
           <div class="button main__button">Подключить</div>
         </div>
         <div class="ilustration">
-          <img id="plants" src="images/ilustration/plants.svg" alt=" " />
           <img id="phone" src="images/ilustration/phone.svg" alt=" " />
           <img id="girl" src="images/ilustration/girl.svg" alt=" " />
           <img id="message1" src="images/ilustration/message1.svg" alt=" " />
@@ -55,7 +54,7 @@
           <img id="plane4" src="images/ilustration/plane4.svg" alt=" " />
           <img id="man" src="images/ilustration/man.svg" alt=" " />
           <img id="ava1" src="images/ilustration/ava1.svg" alt=" " />
-          <img id="ava2" src="images/ilustration/ava2.svg" alt=" " />
+          <img id="ava2" src="images/ilustration/ava2.svg" alt="" />
           <img id="ava3" src="images/ilustration/ava3.svg" alt=" " />
           <img id="ground" src="images/ilustration/ground.svg" alt=" " />
           <img id="lines" src="images/ilustration/lines.svg" alt=" " />
@@ -63,93 +62,95 @@
       </div>
     </section>
     <section class="feature">
-      <div>
-        <div class="title">tBot Online — это</div>
-        <div class="feature_list">
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Ничего лишнего</h5>
-              <p>
-                Отсутствие лишних приложений для операторов. Оператору не нужно
-                учиться работать с чатом
-              </p>
+      <div class="container">
+        <div>
+          <div class="title">tBot Online — это</div>
+          <div class="feature_list">
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Ничего лишнего</h5>
+                <p>
+                  Отсутствие лишних приложений для операторов. Оператору не
+                  нужно учиться работать с чатом
+                </p>
+              </div>
+            </div>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Простота</h5>
+                <p>Простая установка на сайт</p>
+              </div>
+            </div>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Несколько ассистентов</h5>
+                <p>Возможность подключения нескольких ассистентов</p>
+              </div>
+            </div>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Кастомизация</h5>
+                <p>Настройка интерфейса под нужды сайта</p>
+              </div>
             </div>
           </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Простота</h5>
-              <p>Простая установка на сайт</p>
-            </div>
+        </div>
+        <div class="feature_img">
+          <img id="tel" src="images/feature_img/tel.svg" alt=" " />
+          <img id="screen" src="images/feature_img/screen.svg" alt=" " />
+          <img
+            id="tel_elements"
+            src="images/feature_img/tel_elements.svg"
+            alt=""
+          />
+          <div class="messageGreen m1">
+            <span>Здравствуйте! а расскажите о работе <b>tBot</b> Online.</span>
+            <span>11:02</span>
           </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Несколько ассистентов</h5>
-              <p>Возможность подключения нескольких ассистентов</p>
-            </div>
+          <div class="messageWhite m2">
+            <span
+              >Добрый день. <b>tBot Online</b> — удобный инструмент для общения
+              с клиентами всего через одно приложение. Чат легко подключить
+              на сайт, а оператору не нужно учиться работать с чатом.</span
+            >
+            <span>11:03</span>
           </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Кастомизация</h5>
-              <p>Настройка интерфейса под нужды сайта</p>
-            </div>
+          <div class="messageGreen m3">
+            <span>А я могу подключить несколько ассистентов?</span>
+            <span>11:05</span>
           </div>
-        </div>
-      </div>
-      <div class="feature_img">
-        <img id="tel" src="images/feature_img/tel.svg" alt=" " />
-        <img id="screen" src="images/feature_img/screen.svg" alt=" " />
-        <img
-          id="tel_elements"
-          src="images/feature_img/tel_elements.svg"
-          alt=""
-        />
-        <div class="messageGreen m1">
-          <span>Здравствуйте! а расскажите о работе <b>tBot</b> Online.</span>
-          <span>11:02</span>
-        </div>
-        <div class="messageWhite m2">
-          <span
-            >Добрый день. <b>tBot Online</b> — удобный инструмент для общения
-            с клиентами всего через одно приложение. Чат легко подключить
-            на сайт, а оператору не нужно учиться работать с чатом.</span
-          >
-          <span>11:03</span>
-        </div>
-        <div class="messageGreen m3">
-          <span>А я могу подключить несколько ассистентов?</span>
-          <span>11:05</span>
-        </div>
-        <div class="messageWhite m4">
-          <span
-            >Конечно! Вы можете подключить неограниченное количество
-            ассистентов.</span
-          >
-          <span>11:05</span>
-        </div>
-        <div class="messageGreen m5">
-          <span>Могу ли я кастомизировать чат под свои нужды?</span>
-          <span>11:06</span>
-        </div>
-        <div class="messageWhite m6">
-          <span>Да, вы можете настроить иконки, цвет, шрифт</span>
-          <span>11:06</span>
-        </div>
-        <div class="messageGreen m7">
-          <span>Как установить чат на сайт? </span>
-          <span>11:09</span>
-        </div>
-        <div class="messageWhite m8">
-          <span
-            >Вам необходимо создать Telegram-бота, а мы подключим его на ваш
-            сайт. Кстати, для вас подарок — бесплатный пробный период на 1
-            месяц! За это время вы сможете оценить простоту и удобство
-            сервиса</span
-          >
-          <span>11:10</span>
-        </div>
-        <div class="messageGreen m9">
-          <span>Спасибо! Сейчас создам Telegram-бота</span>
-          <span>11:11</span>
+          <div class="messageWhite m4">
+            <span
+              >Конечно! Вы можете подключить неограниченное количество
+              ассистентов.</span
+            >
+            <span>11:05</span>
+          </div>
+          <div class="messageGreen m5">
+            <span>Могу ли я кастомизировать чат под свои нужды?</span>
+            <span>11:06</span>
+          </div>
+          <div class="messageWhite m6">
+            <span>Да, вы можете настроить иконки, цвет, шрифт</span>
+            <span>11:06</span>
+          </div>
+          <div class="messageGreen m7">
+            <span>Как установить чат на сайт? </span>
+            <span>11:09</span>
+          </div>
+          <div class="messageWhite m8">
+            <span
+              >Вам необходимо создать Telegram-бота, а мы подключим его на ваш
+              сайт. Кстати, для вас подарок — бесплатный пробный период на 1
+              месяц! За это время вы сможете оценить простоту и удобство
+              сервиса</span
+            >
+            <span>11:10</span>
+          </div>
+          <div class="messageGreen m9">
+            <span>Спасибо! Сейчас создам Telegram-бота</span>
+            <span>11:11</span>
+          </div>
         </div>
       </div>
     </section>
@@ -206,60 +207,64 @@
         </div>
       </div>
       <div class="ilustration">
-        <img id="steps__tel1" src="images/steps_images/tel1.svg" alt=" " />
-        <img id="steps__tel2" src="images/steps_images/tel2.svg" alt=" " />
-        <img id="steps__tel3" src="images/steps_images/tel3.svg" alt=" " />
-        <img id="blue-1" src="images/steps_images/blue-1.svg" alt=" " />
-        <img id="blue-2" src="images/steps_images/blue-2.svg" alt=" " />
-        <img id="violet-1" src="images/steps_images/violet-1.svg" alt=" " />
-        <img id="violet-2" src="images/steps_images/violet-2.svg" alt=" " />
+        <div class="container">
+          <img id="steps__tel1" src="images/steps_images/tel1.svg" alt=" " />
+          <img id="steps__tel2" src="images/steps_images/tel2.svg" alt=" " />
+          <img id="steps__tel3" src="images/steps_images/tel3.svg" alt=" " />
+          <img id="blue-1" src="images/steps_images/blue-1.svg" alt=" " />
+          <img id="blue-2" src="images/steps_images/blue-2.svg" alt=" " />
+          <img id="violet-1" src="images/steps_images/violet-1.svg" alt=" " />
+          <img id="violet-2" src="images/steps_images/violet-2.svg" alt=" " />
+        </div>
       </div>
     </section>
     <section class="reviews">
-      <div class="title">Отзывы клиентов</div>
-      <img src="images/reviews_images/quote.svg" alt="" />
-      <div class="rev-messages">
-        <div class="message">
-          <div>
-            <h5>Как же удобно!</h5>
-            <span
-              >В рамках спецификации современных стандартов, базовые сценарии
-              поведения пользователей, которые представляют собой яркий пример
-              континентально-европейского типа политической культуры, будут
-              преданы социально-демократической анафеме.</span
-            >
-          </div>
-          <div class="person">
-            <img src="images/reviews_images/person-1.svg" alt=" " />
+      <div class="container">
+        <div class="title">Отзывы клиентов</div>
+        <img src="images/reviews_images/quote.svg" alt="" />
+        <div class="rev-messages">
+          <div class="message">
             <div>
-              <h4>Анна Купер</h4>
-              <span>romashka.ru</span>
+              <h5>Как же удобно!</h5>
+              <span
+                >В рамках спецификации современных стандартов, базовые сценарии
+                поведения пользователей, которые представляют собой яркий пример
+                континентально-европейского типа политической культуры, будут
+                преданы социально-демократической анафеме.</span
+              >
+            </div>
+            <div class="person">
+              <img src="images/reviews_images/person-1.svg" alt=" " />
+              <div>
+                <h4>Анна Купер</h4>
+                <span>romashka.ru</span>
+              </div>
+            </div>
+          </div>
+          <div class="message">
+            <div>
+              <h5>Теперь мы идем в ногу со временем</h5>
+              <span
+                >А ещё интерактивные прототипы превращены в посмешище, хотя само
+                их существование приносит несомненную пользу обществу.
+                Банальные, но неопровержимые выводы, а также тщательные
+                исследования конкурентов формируют сеть.</span
+              >
+            </div>
+            <div class="person">
+              <img src="images/reviews_images/person-2.svg" alt=" " />
+              <div>
+                <h4>Андрей Васильев</h4>
+                <span>samogon-ont.ru</span>
+              </div>
             </div>
           </div>
         </div>
-        <div class="message">
-          <div>
-            <h5>Теперь мы идем в ногу со временем</h5>
-            <span
-              >А ещё интерактивные прототипы превращены в посмешище, хотя само
-              их существование приносит несомненную пользу обществу. Банальные,
-              но неопровержимые выводы, а также тщательные исследования
-              конкурентов формируют сеть.</span
-            >
-          </div>
-          <div class="person">
-            <img src="images/reviews_images/person-2.svg" alt=" " />
-            <div>
-              <h4>Андрей Васильев</h4>
-              <span>samogon-ont.ru</span>
-            </div>
-          </div>
+        <div class="dots">
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-      </div>
-      <div class="dots">
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
     </section>
     <section class="getEmail">
@@ -276,47 +281,53 @@
       </div>
     </section>
     <section class="footer">
-      <div>
+      <div class="container">
         <div class="logo">tBot</div>
         <div class="menu">
           <div class="column">
-            <div class="title">Telegram чат</div>
-            <div>О нас</div>
-            <div>Партнеры</div>
-            <div>Инструкция</div>
-            <div>Цены</div>
-            <div>Контакты</div>
+            <a class="title">Telegram чат</a>
+            <a>О нас</a>
+            <a>Партнеры</a>
+            <a>Инструкция</a>
+            <a>Цены</a>
+            <a>Контакты</a>
           </div>
           <div class="column">
-            <div class="title">Поддержка</div>
-            <div>Центр поддержки</div>
-            <div>Политика конфеденциальности</div>
-            <div>Документы оферта</div>
-            <div>Документы оферта</div>
-            <div>Статус</div>
+            <a class="title">Поддержка</a>
+            <a>Центр поддержки</a>
+            <a>Политика конфеденциальности</a>
+            <a>Документы оферта</a>
+            <a>Документы оферта</a>
+            <a>Статус</a>
           </div>
         </div>
       </div>
-      <div>© 2021 <b>tBot</b>. Все права защищены</div>
+      <div class="container">© 2021 <b>tBot</b>. Все права защищены</div>
     </section>
     <div class="fade hidden">
       <div class="modal_form">
-        <img class="button_close" src="images/form_close.svg" alt="">
+        <img class="button_close" src="images/form_close.svg" alt="" />
         <h1>Вход</h1>
-        <input type="text" placeholder="Телефон">
-        <div class="blockedToWatch"><input  type="text" placeholder="Пароль"></div>
+        <input type="text" placeholder="Телефон" />
+        <div class="blockedToWatch">
+          <input type="text" placeholder="Пароль" />
+        </div>
         <span>Напомнить пароль</span>
         <div class="button">Войти</div>
       </div>
     </div>
     <div class="fade hidden">
       <div class="modal_form">
-        <img class="button_close" src="images/form_close.svg" alt="">
+        <img class="button_close" src="images/form_close.svg" alt="" />
         <h1>Регистрация</h1>
-        <input type="text" placeholder="Телефон">
-        <input type="text" placeholder="Электронная почта">
-        <div class="blockedToWatch"><input  type="text" placeholder="Пароль"></div>
-        <div class="blockedToWatch"><input  type="text" placeholder="Повторите пароль"></div>
+        <input type="text" placeholder="Телефон" />
+        <input type="text" placeholder="Электронная почта" />
+        <div class="blockedToWatch">
+          <input type="text" placeholder="Пароль" />
+        </div>
+        <div class="blockedToWatch">
+          <input type="text" placeholder="Повторите пароль" />
+        </div>
         <div class="button">Войти</div>
       </div>
     </div>
