--- a/test_task/tablet_avtoris.html
+++ b/test_task/tablet_avtoris.html
@@ -16,19 +16,19 @@
     <title>tBot</title>
   </head>
   <body>
-    <div class="header_container">
+    <div class="header container">
       <div class="logo">
         <img src="images/logo.svg" alt="logo" />
         <h3>tBot</h3>
       </div>
-      <div class="menu_itm">
-        <div>Подключение</div>
-        <div>Оплата</div>
-        <div>Контакты</div>
-        <div>Выход</div>
+      <div class="menu_itm forTablet">
+        <a>Подключение</a>
+        <a>Оплата</a>
+        <a>Контакты</a>
+        <a>Выход</a>
       </div>
     </div>
-    <div class="main_container">
+    <div class="main container">
       <img src="images/purple_circle.svg" alt="/" />
       <img src="images/turquoise_circle.svg" alt="/" />
       <img src="images/big_purple_circle.svg" alt="/" />
