--- a/test_task/LP_avtoris_desk.html
+++ b/test_task/LP_avtoris_desk.html
@@ -14,53 +14,55 @@
     <title>tBot_test</title>
   </head>
   <body>
-    <div class="header_container">
-      <div class="logo">
-        <img class="logo__img" src="images/logo.svg" alt="logo" />
-        <h3 class="logo__title">tBot</h3>
-      </div>
-      <div class="menu_itm">
-        <div>Подключение</div>
-        <div>Оплата</div>
-        <div>Контакты</div>
-        <div>Выход</div>
-      </div>
-    </div>
-    <div class="main_container">
-      <img src="images/purple_circle.svg" alt="/" />     
-      <img src="images/turquoise_circle.svg" alt="/">
-      <img src="images/big_purple_circle.svg" alt="/">
- 
-      <div class="information">
-        <div class="main__title">
-          <span>Telegram чат</span> <br />на вашем сайте
+    <section class="first">
+      <div class="container">
+        <div class="logo">
+          <img class="logo__img" src="images/logo.svg" alt="logo" />
+          <h3 class="logo__title">tBot</h3>
         </div>
-        <div>
-          Общение с клиентами станет простым и удобным, а подключение займет 5
-          минут. Первый месяц — <b>бесплатно</b>!
+        <div class="menu_itm">
+          <a>Подключение</a>
+          <a>Оплата</a>
+          <a>Контакты</a>
+          <a>Выход</a>
         </div>
-        <div class="button main__button">Подключить</div>
       </div>
-      <div class="ilustration">
-        <img id="plants" src="images/ilustration/plants.svg" alt=" ">
-        <img id="phone" src="images/ilustration/phone.svg" alt=" ">
-        <img id="girl" src="images/ilustration/girl.svg" alt=" ">
-        <img id="message1" src="images/ilustration/message1.svg" alt=" ">
-        <img id="message2" src="images/ilustration/message2.svg" alt=" ">
-        <img id="message3" src="images/ilustration/message3.svg" alt=" ">
-        <img id="wifi" src="images/ilustration/wifi.svg" alt=" ">
-        <img id="plane1" src="images/ilustration/plane1.svg" alt=" ">
-        <img id="plane2" src="images/ilustration/plane2.svg" alt=" ">
-        <img id="plane3" src="images/ilustration/plane3.svg" alt=" ">
-        <img id="plane4" src="images/ilustration/plane4.svg" alt=" ">
-        <img id="man" src="images/ilustration/man.svg" alt=" ">
-        <img id="ava1" src="images/ilustration/ava1.svg" alt=" ">
-        <img id="ava2" src="images/ilustration/ava2.svg" alt=" ">
-        <img id="ava3" src="images/ilustration/ava3.svg" alt=" ">
-        <img id="ground" src="images/ilustration/ground.svg" alt=" ">
-        <img id="lines" src="images/ilustration/lines.svg" alt=" ">
-        
       </div>
-    </div>
+      <div class="main container">
+        <img src="images/purple_circle.svg" alt="/" />
+        <img src="images/turquoise_circle.svg" alt="/" />
+        <img src="images/big_purple_circle.svg" alt="/" />
+
+        <div class="information">
+          <div class="main__title">
+            <span>Telegram чат</span> <br />на вашем сайте
+          </div>
+          <div>
+            Общение с клиентами станет простым и удобным, а подключение займет 5
+            минут. Первый месяц — <b>бесплатно</b>!
+          </div>
+          <div class="button main__button">Подключить</div>
+        </div>
+        <div class="ilustration">
+          <img id="plants" src="images/ilustration/plants.svg" alt=" " />
+          <img id="phone" src="images/ilustration/phone.svg" alt=" " />
+          <img id="girl" src="images/ilustration/girl.svg" alt=" " />
+          <img id="message1" src="images/ilustration/message1.svg" alt=" " />
+          <img id="message2" src="images/ilustration/message2.svg" alt=" " />
+          <img id="message3" src="images/ilustration/message3.svg" alt=" " />
+          <img id="wifi" src="images/ilustration/wifi.svg" alt=" " />
+          <img id="plane1" src="images/ilustration/plane1.svg" alt=" " />
+          <img id="plane2" src="images/ilustration/plane2.svg" alt=" " />
+          <img id="plane3" src="images/ilustration/plane3.svg" alt=" " />
+          <img id="plane4" src="images/ilustration/plane4.svg" alt=" " />
+          <img id="man" src="images/ilustration/man.svg" alt=" " />
+          <img id="ava1" src="images/ilustration/ava1.svg" alt=" " />
+          <img id="ava2" src="images/ilustration/ava2.svg" alt=" " />
+          <img id="ava3" src="images/ilustration/ava3.svg" alt=" " />
+          <img id="ground" src="images/ilustration/ground.svg" alt=" " />
+          <img id="lines" src="images/ilustration/lines.svg" alt=" " />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
