--- a/test_task/tablet.html
+++ b/test_task/tablet.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <section class="first">
-      <div class="header_container">
+      <div class="header container">
         <div class="logo">
           <img src="images/logo.svg" alt="logo" />
           <h3>tBot</h3>
@@ -28,11 +28,9 @@
           <div class="button">Вход</div>
           <div class="button">Регистрация</div>
         </div>
-        <div class="menu_itm forMobile">
-          <img src="images/forMobile/menu_itm.svg" alt="">
-        </div>
+        <img class="forMobile" src="images/forMobile/menu_itm.svg" alt="" />
       </div>
-      <div class="main_container">
+      <div class="main container">
         <img src="images/purple_circle.svg" alt="/" />
         <img src="images/turquoise_circle.svg" alt="/" />
         <img src="images/big_purple_circle.svg" alt="/" />
@@ -51,39 +49,41 @@
       </div>
     </section>
     <section class="feature">
-      <div>
-        <div class="title">tBot Online — это</div>
-        <div class="feature_list">
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Ничего лишнего</h5>
-              <p>
-                Отсутствие лишних приложений для операторов. Оператору не нужно
-                учиться работать с чатом
-              </p>
+      <div class="container">
+        <div class="">
+          <div class="title">tBot Online — это</div>
+          <div class="feature_list">
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Ничего лишнего</h5>
+                <p>
+                  Отсутствие лишних приложений для операторов. Оператору не
+                  нужно учиться работать с чатом
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Простота</h5>
-              <p>Простая установка на сайт</p>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Простота</h5>
+                <p>Простая установка на сайт</p>
+              </div>
             </div>
-          </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Несколько ассистентов</h5>
-              <p>Возможность подключения нескольких ассистентов</p>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Несколько ассистентов</h5>
+                <p>Возможность подключения нескольких ассистентов</p>
+              </div>
             </div>
-          </div>
-          <div class="list_item">
-            <div class="list_item_text">
-              <h5>Кастомизация</h5>
-              <p>Настройка интерфейса под нужды сайта</p>
+            <div class="list_item">
+              <div class="list_item_text">
+                <h5>Кастомизация</h5>
+                <p>Настройка интерфейса под нужды сайта</p>
+              </div>
             </div>
           </div>
         </div>
+        <img src="images/tablet_img/feature_img.svg" alt="" />
       </div>
-      <img src="images/tablet_img/feature_img.svg" alt="" />
     </section>
     <section class="tarifs">
       <div class="container">
@@ -145,60 +145,61 @@
         <img src="images/tablet_img/steps_tele1.svg" alt="" />
         <img src="images/tablet_img/steps_tele2.svg" alt="" />
         <img src="images/tablet_img/steps_tele3.svg" alt="" />
+        <div class="bg"></div>
       </div>
       <div class="dots forMobile">
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <img class="bg" src="images/tablet_img/steps_bg.svg" alt="">
-      <img class="bg blue" src="images/tablet_img/steps_bluebg.svg" alt="">
     </section>
     <section class="reviews">
-      <div class="title">Отзывы клиентов</div>
-      <img src="images/reviews_images/quote.svg" alt="" />
-      <div class="rev-messages">
-        <div class="message">
-          <div>
-            <h5>Как же удобно!</h5>
-            <span
-              >В рамках спецификации современных стандартов, базовые сценарии
-              поведения пользователей, которые представляют собой яркий пример
-              континентально-европейского типа политической культуры, будут
-              преданы социально-демократической анафеме.</span
-            >
-          </div>
-          <div class="person">
-            <img src="images/reviews_images/person-1.svg" alt=" " />
+      <div class="container">
+        <div class="title">Отзывы клиентов</div>
+        <img src="images/reviews_images/quote.svg" alt="" />
+        <div class="rev-messages">
+          <div class="message">
             <div>
-              <h4>Анна Купер</h4>
-              <span>romashka.ru</span>
+              <h5>Как же удобно!</h5>
+              <span
+                >В рамках спецификации современных стандартов, базовые сценарии
+                поведения пользователей, которые представляют собой яркий пример
+                континентально-европейского типа политической культуры, будут
+                преданы социально-демократической анафеме.</span
+              >
+            </div>
+            <div class="person">
+              <img src="images/reviews_images/person-1.svg" alt=" " />
+              <div>
+                <h4>Анна Купер</h4>
+                <span>romashka.ru</span>
+              </div>
+            </div>
+          </div>
+          <div class="message">
+            <div>
+              <h5>Теперь мы идем в ногу со временем</h5>
+              <span
+                >А ещё интерактивные прототипы превращены в посмешище, хотя само
+                их существование приносит несомненную пользу обществу.
+                Банальные, но неопровержимые выводы, а также тщательные
+                исследования конкурентов формируют сеть.</span
+              >
+            </div>
+            <div class="person">
+              <img src="images/reviews_images/person-2.svg" alt=" " />
+              <div>
+                <h4>Андрей Васильев</h4>
+                <span>samogon-ont.ru</span>
+              </div>
             </div>
           </div>
         </div>
-        <div class="message">
-          <div>
-            <h5>Теперь мы идем в ногу со временем</h5>
-            <span
-              >А ещё интерактивные прототипы превращены в посмешище, хотя само
-              их существование приносит несомненную пользу обществу. Банальные,
-              но неопровержимые выводы, а также тщательные исследования
-              конкурентов формируют сеть.</span
-            >
-          </div>
-          <div class="person">
-            <img src="images/reviews_images/person-2.svg" alt=" " />
-            <div>
-              <h4>Андрей Васильев</h4>
-              <span>samogon-ont.ru</span>
-            </div>
-          </div>
+        <div class="dots">
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-      </div>
-      <div class="dots">
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
     </section>
     <section class="getEmail">
@@ -218,25 +219,26 @@
         <div class="logo">tBot</div>
         <div class="menu">
           <div class="column">
-            <div class="title">Telegram чат</div>
-            <div>О нас</div>
-            <div>Партнеры</div>
-            <div>Инструкция</div>
-            <div>Цены</div>
-            <div>Контакты</div>
+            <a class="title">Telegram чат</a>
+            <a>О нас</a>
+            <a>Партнеры</a>
+            <a>Инструкция</a>
+            <a>Цены</a>
+            <a>Контакты</a>
           </div>
           <div class="column">
-            <div class="title">Поддержка</div>
-            <div>Центр поддержки</div>
-            <div>Политика конфеденциальности</div>
-            <div>Документы оферта</div>
-            <div>Документы оферта</div>
-            <div>Статус</div>
+            <a class="title">Поддержка</a>
+            <a>Центр поддержки</a>
+            <a>Политика конфеденциальности</a>
+            <a>Документы оферта</a>
+            <a>Документы оферта</a>
+            <a>Статус</a>
           </div>
         </div>
       </div>
       <div>© 2021 <b>tBot</b>. Все права защищены</div>
     </section>
+
     <div class="fade hidden">
       <div class="modal_form">
         <img class="button_close" src="images/form_close.svg" alt="" />
@@ -267,11 +269,11 @@
     <div class="fade forMobile hidden">
       <div class="mobile modal_form">
         <img class="button_close" src="images/form_close.svg" alt="" />
-        <div class="mobile button ">Вход</div>
-        <div class=" button">Регистрация</div>
+        <div class="mobile button">Вход</div>
+        <div class="button">Регистрация</div>
       </div>
     </div>
-    <div class="fade forMobile">
+    <div class="fade forMobile hidden">
       <div class="mobile modal_form">
         <img class="button_close" src="images/form_close.svg" alt="" />
         <span>Подключение</span>
